# jakewray.ca

./: .direnvrc  .env.example  .env.production  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  check_error.txt  check_output_py.txt  curl_output.txt  deploy_gcp.sh  docker-compose.prod.yml  docker-compose.yml  flake.nix  homepage_source.html  nginx.conf  recovery_run.sh  tailwind.config.js
.cargo/: config.toml
.github/workflows/: ci.yml  docker.yml
.sass-cache/80caea1436c819853a0f08313b8155a0e2f3150d/: main.scssc
backend/: Cargo.toml
backend/src/: main.rs  state.rs
backend/src/api/: admin.rs  mod.rs  public.rs
docs/: AUTH_IMPLEMENTATION.md  CACHING.md  LOCAL_DEV.md  NIX_SETUP.md  SETUP_ADMIN.md  openproject-plan.md
frontend/: Cargo.toml
frontend/src/: app.rs  lib.rs
frontend/src/components/: footer.rs  navbar.rs
frontend/src/data/: journalism.json  journalism.rs  mod.rs
frontend/src/pages/: mod.rs  sections.rs  setup.rs
frontend/src/pages/admin/: composer.rs  dashboard.rs  login.rs  mod.rs  sync_manager.rs
migration/src/: main.rs
nginx/: nginx.conf  nginx_http_only.conf
scripts/: create_admin_user.sh  deploy.sh  import_journalism.py  init_certbot.sh  init_infra.sh  init_ssl.sh  install_compose_plugin.sh  remote_build.sh  remote_setup.sh  setup-dev.sh
shared/src/: lib.rs
style/: input.css  main.scss
tmp_context_test/: Cargo.toml
tmp_context_test/src/: main.rs
