[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
web-sys = { version = "0.3", features = ["Window", "Storage"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11", features = ["json"] }
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[features]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
